[gd_scene load_steps=51 format=3 uid="uid://0dejidk8eh4c"]

[ext_resource type="Script" path="res://Scenes/PCs/player_systems/HUD/cd_frame.gd" id="1_ejmnn"]
[ext_resource type="Texture2D" uid="uid://t8k3v2qmoxic" path="res://Graphics/UI/CD_Overlay_SM_4x.png" id="1_uqpoh"]
[ext_resource type="Texture2D" uid="uid://dyf5s4t0sisab" path="res://Graphics/Characters/DANI_DANCER/Ability_Icons/ICON_Pole_Inversion_Dive_1x.png" id="2_bpeiw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vy8ag"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_awwfw"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_go363"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc3cu"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0l5a"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eplh"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lmio"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_30ek4"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyljl"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_byd2e"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaexg"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d67ko"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbwid"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_32ayg"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_71el3"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsxxx"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy642"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpur"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61r6x"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pf1a"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2choa"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ct5w"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuqyt"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uh37"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sdg3"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usmu4"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve4wj"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2flt4"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gks7w"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldlvh"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e24l"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xevux"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnbu6"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_onlpy"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0nkn"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mamfk"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d51ff"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fmcp"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yelb8"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sru0x"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gigb"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yovy7"]
atlas = ExtResource("1_uqpoh")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs4go"]
atlas = ExtResource("1_uqpoh")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0usk"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0bx7"]
atlas = ExtResource("1_uqpoh")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2lro"]
atlas = ExtResource("1_uqpoh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lhunq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy8ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awwfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go363")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc3cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0l5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eplh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lmio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30ek4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyljl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byd2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaexg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d67ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbwid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32ayg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71el3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsxxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy642")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61r6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pf1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2choa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ct5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuqyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uh37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sdg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usmu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve4wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2flt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gks7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldlvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e24l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xevux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnbu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onlpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0nkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mamfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d51ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fmcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yelb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sru0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gigb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yovy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs4go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0usk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0bx7")
}],
"loop": false,
"name": &"COOLDOWN",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2lro")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CD_Frame" type="Control"]
light_mask = 2
visibility_layer = 2
custom_minimum_size = Vector2(8, 8)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -632.0
offset_bottom = -352.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejmnn")

[node name="TR_AB_ICON" type="TextureRect" parent="."]
light_mask = 2
visibility_layer = 2
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bpeiw")
expand_mode = 2
stretch_mode = 4

[node name="S2D_CD_Frame" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(4, 4)
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_lhunq")

[connection signal="animation_finished" from="S2D_CD_Frame" to="." method="_on_cd_animation_finished"]
